# polygonskeletons

./: README.md  setup.py
cgal/: CMakeLists.txt  polygons-soup.h  skeleton-tgf.cpp
examples/: example-figure.py  example1.txt  makefile
polygonskeletons/: __init__.py
